add action del formulario

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -36,7 +36,7 @@
             </div>   
         </header>
         <div class="contenido">
-            <form action="" method="post">
+            <form action="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox" method="post">
                 <legend>contacto</legend>
                 <fieldset class="formContenido">
                     <div class="formContenido1">
